// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Information /> component tests should match default snapshot 1`] = `
<div>
  <section
    class="information"
  >
    <button
      class="information-toggle"
      type="button"
    >
      <span>
        Copyrighted Material
      </span>
       | 
      <span
        class="learn-more"
      >
        <span>
          Learn More
        </span>
      </span>
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_down"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="rah-static rah-static--height-zero "
      style="height: 0px; overflow: hidden;"
    >
      <div
        style="display: none;"
      >
        <div
          class="copyrights-section"
          style="max-height: 0;"
        >
          <div
            class="copyright-content"
          >
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                href="https://www.crossway.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Crossway"
                  class="image-landscape"
                  src="https://images.bible.cloud/logo/crossway.svg"
                />
              </a>
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                class="org-name"
                rel="noopener"
                target="_blank"
              >
                Good News Publishers
              </a>
              <p>
                <span>
                  The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
              </p>
            </div>
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                href="https://www.crossway.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Crossway"
                  class="image-landscape"
                  src="https://images.bible.cloud/logo/crossway.svg"
                />
              </a>
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                class="org-name"
                rel="noopener"
                target="_blank"
              >
                Good News Publishers
              </a>
              <p>
                <span>
                  The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
              </p>
            </div>
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible audio is brought to you by:
                </span>
              </h3>
              <a
                href="http://www.fcbh.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Faith Comes By Hearing"
                  class="image-landscape fcbh-copyright-logo"
                  src="https://bible.cloud/images/logo/FCBH_Color.svg"
                />
              </a>
              <p>
                <span>
                  Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
                <span>
                  Audio: ℗ 2009 Hosanna
                </span>
                <br />
              </p>
            </div>
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible audio is brought to you by:
                </span>
              </h3>
              <a
                href="http://www.fcbh.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Faith Comes By Hearing"
                  class="image-landscape fcbh-copyright-logo"
                  src="https://bible.cloud/images/logo/FCBH_Color.svg"
                />
              </a>
              <p>
                <span>
                  Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
                <span>
                  Audio: ℗ 2009 Hosanna
                </span>
                <br />
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ministry-statement"
    >
      <div
        class="ministry-tagline"
      >
        <span>
          ©
        </span>
         
        <a
          href="http://www.bible.is"
          rel="noopener"
          target="_blank"
        >
          <span>
            Bible.is
          </span>
        </a>
        <span>
          , a ministry of
        </span>
         
        <a
          href="https://www.faithcomesbyhearing.com"
          rel="noopener"
          target="_blank"
        >
          <span>
            Faith Comes By Hearing
          </span>
        </a>
         
        <span>
          ®.
        </span>
         
      </div>
      <div
        class="ministry-terms-support"
      >
        <a
          href="/terms"
          id="terms-of-service"
        >
          <span>
            Terms and Conditions
          </span>
        </a>
          |  
        <a
          href="https://support.bible.is/contact"
          id="help-support"
          rel="noopener"
          target="_blank"
        >
          <span>
            Help & Support
          </span>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`<Information /> component tests should match snapshot with missing information 1`] = `
<div>
  <section
    class="information"
  >
    <button
      class="information-toggle"
      type="button"
    >
      <span>
        Copyrighted Material
      </span>
       | 
      <span
        class="learn-more"
      >
        <span>
          Learn More
        </span>
      </span>
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_down"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="rah-static rah-static--height-zero "
      style="height: 0px; overflow: hidden;"
    >
      <div
        style="display: none;"
      >
        <div
          class="copyrights-section"
          style="max-height: 0;"
        >
          <div
            class="copyright-content"
          >
            <div
              class="cp-section"
            >
              <p>
                <span>
                  The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
              </p>
            </div>
            <div
              class="cp-section"
            >
              <p>
                <span>
                  The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
              </p>
            </div>
            <div
              class="cp-section"
            >
              <p>
                <span>
                  Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
                <span>
                  Audio: ℗ 2009 Hosanna
                </span>
                <br />
              </p>
            </div>
            <div
              class="cp-section"
            >
              <p>
                <span>
                  Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
                </span>
                <br />
                <span>
                  English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
                </span>
                <br />
                <span>
                  Audio: ℗ 2009 Hosanna
                </span>
                <br />
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ministry-statement"
    >
      <div
        class="ministry-tagline"
      >
        <span>
          ©
        </span>
         
        <a
          href="http://www.bible.is"
          rel="noopener"
          target="_blank"
        >
          <span>
            Bible.is
          </span>
        </a>
        <span>
          , a ministry of
        </span>
         
        <a
          href="https://www.faithcomesbyhearing.com"
          rel="noopener"
          target="_blank"
        >
          <span>
            Faith Comes By Hearing
          </span>
        </a>
         
        <span>
          ®.
        </span>
         
      </div>
      <div
        class="ministry-terms-support"
      >
        <a
          href="/terms"
          id="terms-of-service"
        >
          <span>
            Terms and Conditions
          </span>
        </a>
          |  
        <a
          href="https://support.bible.is/contact"
          id="help-support"
          rel="noopener"
          target="_blank"
        >
          <span>
            Help & Support
          </span>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`<Information /> component tests should match snapshot with missing organizations 1`] = `
<div>
  <section
    class="information"
  >
    <button
      class="information-toggle"
      type="button"
    >
      <span>
        Copyrighted Material
      </span>
       | 
      <span
        class="learn-more"
      >
        <span>
          Learn More
        </span>
      </span>
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_down"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="rah-static rah-static--height-zero "
      style="height: 0px; overflow: hidden;"
    >
      <div
        style="display: none;"
      >
        <div
          class="copyrights-section"
          style="max-height: 0;"
        >
          <div
            class="copyright-content"
          >
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                href="https://www.crossway.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Crossway"
                  class="image-landscape"
                  src="https://images.bible.cloud/logo/crossway.svg"
                />
              </a>
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                class="org-name"
                rel="noopener"
                target="_blank"
              >
                Good News Publishers
              </a>
            </div>
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                href="https://www.crossway.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Crossway"
                  class="image-landscape"
                  src="https://images.bible.cloud/logo/crossway.svg"
                />
              </a>
              <h3>
                <span>
                  This Bible text is brought to you by:
                </span>
              </h3>
              <a
                class="org-name"
                rel="noopener"
                target="_blank"
              >
                Good News Publishers
              </a>
            </div>
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible audio is brought to you by:
                </span>
              </h3>
              <a
                href="https://www.crossway.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Crossway"
                  class="image-landscape fcbh-copyright-logo"
                  src="https://images.bible.cloud/logo/crossway.svg"
                />
              </a>
              <h3>
                <span>
                  This Bible audio is brought to you by:
                </span>
              </h3>
              <a
                class="org-name"
                rel="noopener"
                target="_blank"
              >
                Good News Publishers
              </a>
            </div>
            <div
              class="cp-section"
            >
              <h3>
                <span>
                  This Bible audio is brought to you by:
                </span>
              </h3>
              <a
                href="https://www.crossway.org"
                rel="noopener"
                target="_blank"
              >
                <img
                  alt="Copyright owners logo: Crossway"
                  class="image-landscape fcbh-copyright-logo"
                  src="https://images.bible.cloud/logo/crossway.svg"
                />
              </a>
              <h3>
                <span>
                  This Bible audio is brought to you by:
                </span>
              </h3>
              <a
                class="org-name"
                rel="noopener"
                target="_blank"
              >
                Good News Publishers
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ministry-statement"
    >
      <div
        class="ministry-tagline"
      >
        <span>
          ©
        </span>
         
        <a
          href="http://www.bible.is"
          rel="noopener"
          target="_blank"
        >
          <span>
            Bible.is
          </span>
        </a>
        <span>
          , a ministry of
        </span>
         
        <a
          href="https://www.faithcomesbyhearing.com"
          rel="noopener"
          target="_blank"
        >
          <span>
            Faith Comes By Hearing
          </span>
        </a>
         
        <span>
          ®.
        </span>
         
      </div>
      <div
        class="ministry-terms-support"
      >
        <a
          href="/terms"
          id="terms-of-service"
        >
          <span>
            Terms and Conditions
          </span>
        </a>
          |  
        <a
          href="https://support.bible.is/contact"
          id="help-support"
          rel="noopener"
          target="_blank"
        >
          <span>
            Help & Support
          </span>
        </a>
      </div>
    </div>
  </section>
</div>
`;
